// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test DatabaseTypeLogo should match snapshot 1`] = `
<div>
  <div
    class="css-1uw16ge"
  >
    <img
      alt=""
      src=""
    />
    <span
      title="mysql"
    >
      mysql
    </span>
  </div>
</div>
`;

exports[`test DatabaseTypeLogo should match snapshot 2`] = `
<div>
  <div
    class="css-1uw16ge"
  >
    <img
      alt=""
      src="/static/medit/logo.png"
    />
    <span
      title="db2"
    >
      db2
    </span>
  </div>
</div>
`;
